fixes for heroku